unpackaged/main/default/objects/General_Preferences__c/General_Preferences__c.object-meta.xml
<CustomObject>
    <label>General Preference</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Preferences/Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>