unpackaged/main/default/objects/General_Preferences__c/fields/Airline_Seat_Preference__c.field-meta.xml
<CustomField>
    <fullName>Airline_Seat_Preference__c</fullName>
    <label>Airline Seat Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Middle</fullName>
            </value>
            <value>
                <fullName>Aisle</fullName>
            </value>
            <value>
                <fullName>Window</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>