unpackaged/main/default/objects/General_Preferences__c/fields/Autoname_Override__c.field-meta.xml
<CustomField>
    <fullName>Autoname_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autoname Override</label>
    <type>Checkbox</type>
</CustomField>