unpackaged/main/default/objects/General_Preferences__c/fields/Car_Rental_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Car_Rental_Preferences__c</fullName>
    <label>Car Rental Preferences - DNU</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alamo</fullName>
            </value>
            <value>
                <fullName>Avis</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Dollar</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Hertz</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Sixt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>