unpackaged/main/default/objects/General_Preferences__c/fields/Member_of_Social_or_Athletic_Club__c.field-meta.xml
<CustomField>
    <fullName>Member_of_Social_or_Athletic_Club__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Member of Social or Athletic Club</label>
    <type>TextArea</type>
</CustomField>