unpackaged/main/default/objects/General_Preferences__c/fields/Notes_Summary__c.field-meta.xml
<CustomField>
    <fullName>Notes_Summary__c</fullName>
    <description>This is a summary field for notes. Set via WF rule.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>