unpackaged/main/default/objects/General_Preferences__c/fields/Preferred_Means_of_Air_Travel__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Means_of_Air_Travel__c</fullName>
    <label>Preferred Means of Air Travel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>