unpackaged/main/default/objects/General_Preferences__c/fields/Repeat_Orders__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Orders__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Repeat Orders</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>