unpackaged/main/default/objects/General_Preferences__c/fields/Room_Preference__c.field-meta.xml
<CustomField>
    <fullName>Room_Preference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Room Preference</label>
    <type>TextArea</type>
</CustomField>