unpackaged/main/default/objects/General_Preferences__c/fields/Season_Ticket_Holder__c.field-meta.xml
<CustomField>
    <fullName>Season_Ticket_Holder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Season Ticket Holder</label>
    <type>Checkbox</type>
</CustomField>