unpackaged/main/default/objects/General_Preferences__c/fields/Sports_Played__c.field-meta.xml
<CustomField>
    <fullName>Sports_Played__c</fullName>
    <label>Sports Played</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baseball</fullName>
            </value>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>Biking</fullName>
            </value>
            <value>
                <fullName>Climbing</fullName>
            </value>
            <value>
                <fullName>Figure skating</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Gymnastics</fullName>
            </value>
            <value>
                <fullName>Hiking</fullName>
            </value>
            <value>
                <fullName>Hockey</fullName>
            </value>
            <value>
                <fullName>Horseback Riding</fullName>
            </value>
            <value>
                <fullName>Lacrosse</fullName>
            </value>
            <value>
                <fullName>Martial Arts</fullName>
            </value>
            <value>
                <fullName>Rowing</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Scuba diving</fullName>
            </value>
            <value>
                <fullName>Skiing</fullName>
            </value>
            <value>
                <fullName>Snowboarding</fullName>
            </value>
            <value>
                <fullName>Soccer</fullName>
            </value>
            <value>
                <fullName>Softball</fullName>
            </value>
            <value>
                <fullName>Surfing</fullName>
            </value>
            <value>
                <fullName>Swimming</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>Volleyball</fullName>
            </value>
            <value>
                <fullName>Wrestling</fullName>
            </value>
            <value>
                <fullName>Yoga</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Abseiling</fullName>
                <isActive>false</isActive>
                <label>Abseiling</label>
            </value>
            <value>
                <fullName>Aerobics</fullName>
                <isActive>false</isActive>
                <label>Aerobics</label>
            </value>
            <value>
                <fullName>Aikido</fullName>
                <isActive>false</isActive>
                <label>Aikido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>