unpackaged/main/default/objects/General_Preferences__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gym</fullName>
            </value>
            <value>
                <fullName>Venue for Facials</fullName>
            </value>
            <value>
                <fullName>Venue for Haircuts</fullName>
            </value>
            <value>
                <fullName>Venue for Massages</fullName>
            </value>
            <value>
                <fullName>Dermatologist</fullName>
            </value>
            <value>
                <fullName>Personal Trainer</fullName>
            </value>
            <value>
                <fullName>PT/Acupuncture</fullName>
            </value>
            <value>
                <fullName>Nutritionist</fullName>
            </value>
            <value>
                <fullName>Studio/Class</fullName>
            </value>
            <value>
                <fullName>Favorite Restaurant</fullName>
            </value>
            <value>
                <fullName>Business Dinner</fullName>
            </value>
            <value>
                <fullName>Business Lunch</fullName>
            </value>
            <value>
                <fullName>Business Breakfast</fullName>
            </value>
            <value>
                <fullName>Special Occasion</fullName>
            </value>
            <value>
                <fullName>Weekend Brunch</fullName>
            </value>
            <value>
                <fullName>Cuisine</fullName>
            </value>
            <value>
                <fullName>Quiet Dinner</fullName>
            </value>
            <value>
                <fullName>Restaurant Investor In</fullName>
            </value>
            <value>
                <fullName>Restaurant Client Doesn't Like</fullName>
            </value>
            <value>
                <fullName>Trendy/Fun Scene</fullName>
            </value>
            <value>
                <fullName>Clothing Style</fullName>
            </value>
            <value>
                <fullName>Interests/Hobbies</fullName>
            </value>
            <value>
                <fullName>Cocktail</fullName>
            </value>
            <value>
                <fullName>Wine - RED</fullName>
            </value>
            <value>
                <fullName>Wine - WHITE</fullName>
            </value>
            <value>
                <fullName>Wine - other</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>