unpackaged/main/default/objects/General_Preferences__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>