unpackaged/main/default/objects/General_Preferences__c/fields/Vacation_Locale_Preference__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Locale_Preference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vacation Locale Preference</label>
    <type>TextArea</type>
</CustomField>