unpackaged/main/default/objects/General_Preferences__c/fields/Wine_Cellar__c.field-meta.xml
<CustomField>
    <fullName>Wine_Cellar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wine Cellar</label>
    <type>Checkbox</type>
</CustomField>