unpackaged/main/default/objects/General_Preferences__c/recordTypes/Airline_and_Flight_Preferences.recordType-meta.xml
<RecordType>
    <fullName>Airline_and_Flight_Preferences</fullName>
    <active>true</active>
    <label>Airline Preferences</label>
</RecordType>