unpackaged/main/default/objects/General_Preferences__c/recordTypes/Car_Rental_Preferences.recordType-meta.xml
<RecordType>
    <fullName>Car_Rental_Preferences</fullName>
    <active>true</active>
    <label>Car Rental Preferences</label>
</RecordType>