unpackaged/main/default/objects/General_Preferences__c/recordTypes/Client_Preferences.recordType-meta.xml
<RecordType>
    <fullName>Client_Preferences</fullName>
    <active>true</active>
    <label>Client Preferences</label>
</RecordType>