unpackaged/main/default/objects/General_Preferences__c/recordTypes/Cocktail_Preferences.recordType-meta.xml
<RecordType>
    <fullName>Cocktail_Preferences</fullName>
    <active>true</active>
    <label>Cocktail Preferences</label>
</RecordType>