unpackaged/main/default/objects/General_Preferences__c/recordTypes/Dining_Preference.recordType-meta.xml
<RecordType>
    <fullName>Dining_Preference</fullName>
    <active>true</active>
    <label>Dining Preference</label>
</RecordType>