unpackaged/main/default/objects/General_Preferences__c/recordTypes/Entertainment_Preferences.recordType-meta.xml
<RecordType>
    <fullName>Entertainment_Preferences</fullName>
    <active>true</active>
    <label>Entertainment Preferences</label>
</RecordType>