unpackaged/main/default/objects/General_Preferences__c/recordTypes/Food_Preferences.recordType-meta.xml
<RecordType>
    <fullName>Food_Preferences</fullName>
    <active>true</active>
    <label>Food Preferences</label>
</RecordType>