unpackaged/main/default/objects/General_Preferences__c/recordTypes/Hotel_Preferences.recordType-meta.xml
<RecordType>
    <fullName>Hotel_Preferences</fullName>
    <active>true</active>
    <label>Hotel Preferences</label>
</RecordType>