unpackaged/main/default/objects/General_Preferences__c/recordTypes/Household_Utility_Accounts.recordType-meta.xml
<RecordType>
    <fullName>Household_Utility_Accounts</fullName>
    <active>true</active>
    <label>Household/Utility Accounts</label>
</RecordType>