unpackaged/main/default/objects/General_Preferences__c/recordTypes/Other_Preferences.recordType-meta.xml
<RecordType>
    <fullName>Other_Preferences</fullName>
    <active>true</active>
    <label>Personal Wellness and Other Preferences</label>
</RecordType>