unpackaged/main/default/objects/General_Preferences__c/recordTypes/Wine_Preferences.recordType-meta.xml
<RecordType>
    <fullName>Wine_Preferences</fullName>
    <active>true</active>
    <label>Wine Preferences</label>
</RecordType>