unpackaged/main/default/objects/General_Preferences__c/listViews/Car_Rental_Preferences.listView-meta.xml
<ListView>
    <fullName>Car_Rental_Preferences</fullName>
    <columns>NAME</columns>
    <columns>Car_Rental_Preferences__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>General_Preferences__c.Car_Rental_Preferences</value>
    </filters>
    <label>Car Rental Preferences</label>
</ListView>