unpackaged/main/default/objects/General_Preferences__c/listViews/Hotel_Preferences.listView-meta.xml
<ListView>
    <fullName>Hotel_Preferences</fullName>
    <columns>NAME</columns>
    <columns>Vacation_Locale_Preference__c</columns>
    <columns>Notes_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>General_Preferences__c.Hotel_Preferences</value>
    </filters>
    <label>Hotel Preferences</label>
</ListView>